[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/cell.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/cell_grid.gd" type="Script" id=2]

[node name="cell_grid" type="GridContainer"]
margin_left = 36.0
margin_top = 36.0
margin_right = 340.0
margin_bottom = 340.0
custom_constants/vseparation = 80
custom_constants/hseparation = 80
columns = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cell_0" parent="." instance=ExtResource( 1 )]

[node name="cell_1" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_right = 80.0

[node name="cell_2" parent="." instance=ExtResource( 1 )]
margin_left = 160.0
margin_right = 160.0

[node name="cell_3" parent="." instance=ExtResource( 1 )]
margin_left = 240.0
margin_right = 240.0

[node name="cell_4" parent="." instance=ExtResource( 1 )]
margin_top = 80.0
margin_bottom = 80.0

[node name="cell_5" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 80.0

[node name="cell_6" parent="." instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 80.0
margin_right = 160.0
margin_bottom = 80.0

[node name="cell_7" parent="." instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 80.0
margin_right = 240.0
margin_bottom = 80.0

[node name="cell_8" parent="." instance=ExtResource( 1 )]
margin_top = 160.0
margin_bottom = 160.0

[node name="cell_9" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 160.0
margin_right = 80.0
margin_bottom = 160.0

[node name="cell_a" parent="." instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 160.0
margin_right = 160.0
margin_bottom = 160.0

[node name="cell_b" parent="." instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 160.0
margin_right = 240.0
margin_bottom = 160.0

[node name="cell_c" parent="." instance=ExtResource( 1 )]
margin_top = 240.0
margin_bottom = 240.0

[node name="cell_d" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 240.0
margin_right = 80.0
margin_bottom = 240.0

[node name="cell_e" parent="." instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 240.0
margin_right = 160.0
margin_bottom = 240.0

[node name="cell_f" parent="." instance=ExtResource( 1 )]
margin_left = 240.0
margin_top = 240.0
margin_right = 240.0
margin_bottom = 240.0
